--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-	"content_scripts": [ {
-		"all_frames": true,
-		"js": [ "lib/jquery-1.3.2.min.js", "content_script/content_script.js" ],
-		"matches": [ "http://*/*", "https://*/*", "ftp://*/*" ],
-		"run_at": "document_start"
-	} ],
-	"description": "Double click to open link in new tab.",
+	"manifest_version": 3,
+	"name": "Pro dbClick",
+	"version": "14.1.2023",
+	"description": "Double Click on Google, Brave & YouAI Search results will open in new background tab and other links will open in new foreground tab.",
 	"icons": {
-		"128": "icons/icon_128.png",
-		"32": "icons/icon_32.png",
-		"48": "icons/icon_48.png"
+		"128": "icon 128.png"
 	},
-	"manifest_version": 2,
-	"name": "DoubleClicker",
-	"short_name": "DoubleClicker",
-	"options_page": "options_page/options.html",
-	"permissions": ["storage"],
-	"version": "1.70"
+	"content_scripts": [
+		{
+			"matches": [
+				"<all_urls>"
+			],
+			"js": [
+				"contentscripts.js"
+			],
+			"run_at": "document_start"
+		}
+	]
 }
